--- a/back/src/main/resources/application.yml
+++ b/back/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/ssafy-sns?serverTimezone=Asia/Seoul
+    url: jdbc:mysql://localhost:3306/puppylink?serverTimezone=Asia/Seoul
     username: ssafy
     password: ssafy
 
