--- a/front/package.json
+++ b/front/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.7.0",
+    "recoil": "^0.7.6",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
