--- a/front/package.json
+++ b/front/package.json
@@ -21,6 +21,7 @@
     "pretendard": "^1.3.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.7.0",
     "recoil": "^0.7.6",
