--- a/front/package.json
+++ b/front/package.json
@@ -16,11 +16,15 @@
     "stylelint:fix": "npm run stylelint -- --fix"
   },
   "dependencies": {
+    "@hookform/error-message": "^2.0.1",
+    "axios": "^1.3.0",
+    "i": "^0.3.7",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "pretendard": "^1.3.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.7.0",
     "recoil": "^0.7.6",
