--- a/back/src/main/resources/application.yml
+++ b/back/src/main/resources/application.yml
@@ -5,13 +5,13 @@ spring:
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/puppylink?serverTimezone=Asia/Seoul
-    username: rootp
-    password: rootp
+    username: puppy
+    password: ssafy
 
   jpa:
     open-in-view: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
       use-new-id-generator-mappings: false
