--- a/back/pom.xml
+++ b/back/pom.xml
@@ -177,6 +177,13 @@
 			<artifactId>gson</artifactId>
 			<version>2.6.2</version>
 		</dependency>
+		
+		<!-- AWS s3-->
+	    <dependency>
+	        <groupId>org.springframework.cloud</groupId>
+	        <artifactId>spring-cloud-starter-aws</artifactId>
+	        <version>2.2.6.RELEASE</version>
+	    </dependency>
 
 	</dependencies>
 
