--- a/back/src/main/resources/application.yml
+++ b/back/src/main/resources/application.yml
@@ -42,7 +42,11 @@ spring:
   redis:
     host: localhost
     port: 6379
-
+    
+  servlet:
+    multipart:
+      max-file-size: 100MB
+      max-request-size: 100MB
 
 logging:
   level:
@@ -59,3 +63,15 @@ jwt:
 api:
   serviceKey: dcDOac8qR1Hlkma1oUeF%2BzRbGEis9zq%2BZKa0NoKAwmCORC9AIPE4FYfn3b3bNpI%2BlseM4g%2BZ%2BTUX8CT3tFZDsw%3D%3D
 
+cloud:
+  aws:
+    s3:
+      bucket: puppylink-test
+    region:
+      static: ap-northeast-2
+    stack:
+      auto: false
+    credentials:
+#      instanceProfile: true
+      accessKey: 
+      secretKey: 
