--- a/front/package.json
+++ b/front/package.json
@@ -27,6 +27,7 @@
     "react-hook-form": "^7.43.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.7.0",
+    "react-toastify": "^9.1.1",
     "recoil": "^0.7.6",
     "sort-by": "^1.2.0",
     "vite-plugin-svgr": "^2.4.0"
