--- a/back/src/main/resources/application.yml
+++ b/back/src/main/resources/application.yml
@@ -7,6 +7,8 @@ spring:
     url: jdbc:mysql://localhost:3306/puppylink?serverTimezone=Asia/Seoul
     username: puppy
     password: ssafy
+    sql-script-encoding: UTF-8
+    initialization-mode: embedded
 
   jpa:
     open-in-view: true
@@ -38,11 +40,15 @@ spring:
           starttls:
             enable: true
             required: true
-
+  session:
+    store-type: redis
   redis:
     host: localhost
     port: 6379
-    
+  cache:
+    type: redis
+
+
   servlet:
     multipart:
       max-file-size: 100MB
@@ -73,5 +79,5 @@ cloud:
       auto: false
     credentials:
 #      instanceProfile: true
-      accessKey: 
-      secretKey: 
+      accessKey:
+      secretKey:
