--- a/back/src/main/resources/application.yml
+++ b/back/src/main/resources/application.yml
@@ -2,13 +2,20 @@ server:
   port: 8085
 
 spring:
+
+#  datasource:
+#    driverClassName: com.mysql.cj.jdbc.Driver
+#    url: jdbc:mysql://puppy-mariadb:3306/puppylink?serverTimezone=Asia/Seoul
+#    username: puppy
+#    password: ssafy
+#    sql-script-encoding: UTF-8
+#    initialization-mode: embedded
+
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/puppylink?serverTimezone=Asia/Seoul
     username: puppy
     password: ssafy
-    sql-script-encoding: UTF-8
-    initialization-mode: embedded
 
   jpa:
     open-in-view: true
@@ -45,6 +52,9 @@ spring:
   redis:
     host: localhost
     port: 6379
+#  redis:
+#    host: puppy-redis
+#    port: 6379
   cache:
     type: redis
 
