--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -1,3 +1,4 @@
 FROM adoptopenjdk/openjdk8
-COPY target/*.jar app.jar
-ENTRYPOINT ["java","-jar","app.jar"]
+ARG JAR_FILE_PATH=target/*.jar
+COPY ${JAR_FILE_PATH} app.jar
+ENTRYPOINT ["java", "-jar", "app.jar"]
