test: 젠킨스 테스트 backend

--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -1,7 +1,6 @@
-FROM mariadb:10.6.11-focal
+FROM mysql:8.0.31-oracle
 LABEL author Gonjelly
-ENV MARIADB_ROOT_PASSWORD=ssafy
-ENV MARIADB_DATABASE=puppylink
-ENV MARIADB_USER=puppy
-ENV MARIADB_PASSWORD=ssafy
-EXPOSE 3306
+ENV MYSQL_ROOT_PASSWORD=ssafy
+ENV MYSQL_DATABASE=puppylink
+ENV MYSQL_USER=puppy
+ENV MYSQL_PASSWORD=ssafy
