--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -1,4 +1,4 @@
 FROM adoptopenjdk/openjdk8
 ARG JAR_FILE_PATH=target/*.jar
 COPY ${JAR_FILE_PATH} app.jar
-ENTRYPOINT ["java", "-jar", "app.jar"]
+CMD ["java", "-jar", "app.jar"]
