--- a/back/src/main/resources/application.yml
+++ b/back/src/main/resources/application.yml
@@ -3,22 +3,21 @@ server:
 
 spring:
 
+  driverClassName: com.mysql.cj.jdbc.Driver
+  url: jdbc:mysql://puppy-db:3306/puppylink?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul
+  username: puppy
+  password: ssafy
+
 #  datasource:
 #    driverClassName: com.mysql.cj.jdbc.Driver
-#    url: jdbc:mysql://puppy-mariadb:3306/puppylink?serverTimezone=Asia/Seoul
+#    url: jdbc:mysql://localhost:3306/puppylink?serverTimezone=Asia/Seoul
 #    username: puppy
 #    password: ssafy
-#    sql-script-encoding: UTF-8
-#    initialization-mode: embedded
-
-  datasource:
-    driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/puppylink?serverTimezone=Asia/Seoul
-    username: puppy
-    password: ssafy
 
   jpa:
     open-in-view: true
+    database: mysql   # 추가 해준 부분
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     hibernate:
       ddl-auto: update
       naming:
@@ -28,6 +27,7 @@ spring:
       hibernate:
         format_sql: true
         show-sql: true
+        dialect:
 
   jackson:
     serialization:
@@ -49,12 +49,12 @@ spring:
             required: true
   session:
     store-type: redis
-  redis:
-    host: localhost
-    port: 6379
 #  redis:
-#    host: puppy-redis
+#    host: localhost
 #    port: 6379
+  redis:
+     host: puppy-redis
+     port: 6379
   cache:
     type: redis
 
