feat: axios instance 추가
- import { axBase, axAuth } from '@/apis/api/axiosInstance' 해서 사용
	- axBase: header에 토큰 없이 사용
	- axAuth: 토큰이 필요한 경우 사용
		- axios interceptor 테스트 안해서 확인해봐야함
	- 기본적인 axios와 사용법 동일
		- method: default가 get임
		- url은 localhost등을 제외하고 뒤에 부분만 적으면 됨

이슈: S08P12C107-244

--- a/back/src/main/resources/application.yml
+++ b/back/src/main/resources/application.yml
@@ -3,16 +3,16 @@ server:
 
 spring:
 
-  driverClassName: com.mysql.cj.jdbc.Driver
-  url: jdbc:mysql://puppy-db:3306/puppylink?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul
-  username: puppy
-  password: ssafy
+#  driverClassName: com.mysql.cj.jdbc.Driver
+#  url: jdbc:mysql://puppy-db:3306/puppylink?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul
+#  username: puppy
+#  password: ssafy
 
-#  datasource:
-#    driverClassName: com.mysql.cj.jdbc.Driver
-#    url: jdbc:mysql://localhost:3306/puppylink?serverTimezone=Asia/Seoul
-#    username: puppy
-#    password: ssafy
+  datasource:
+    driverClassName: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/puppylink?serverTimezone=Asia/Seoul
+    username: puppy
+    password: ssafy
 
   jpa:
     open-in-view: true
@@ -49,12 +49,12 @@ spring:
             required: true
   session:
     store-type: redis
-#  redis:
-#    host: localhost
-#    port: 6379
   redis:
-     host: puppy-redis
-     port: 6379
+    host: localhost
+    port: 6379
+#  redis:
+#     host: puppy-redis
+#     port: 6379
   cache:
     type: redis
 
