--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -1,14 +1,14 @@
 FROM node:18.12.1-alpine as build-stage
 # 작업 폴더를 만들고 npm 설치
 WORKDIR /app
-ENV PATH /app/node_modules/.bin:$PATH
+# ENV PATH /app/node_modules/.bin:$PATH
 COPY package.json /app/package.json
 RUN npm install
 # react 등 필요한 API 설치하기
-RUN npm install react-scripts@2.1.3 -g
+# RUN npm install react-scripts@2.1.3 -g
 # 소스를 작업폴더로 복사하고 빌드
-COPY . /usr/src/app
-RUN npm run build
+COPY . /app
+RUN npm run dev
 
 FROM nginx:stable-alpine as production-stage
 COPY --from=build-stage /app/dist /usr/share/nginx/html
