--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -8,11 +8,11 @@ RUN npm install
 # RUN npm install react-scripts@2.1.3 -g
 # 소스를 작업폴더로 복사하고 빌드
 COPY . /app
-RUN npm run dev
+RUN npm run build
 
 FROM nginx:stable-alpine as production-stage
 COPY --from=build-stage /app/dist /usr/share/nginx/html
 # 작성한 nginx 설정파일을 복사한다. 
-COPY nginx.conf /etc/nginx/nginx.conf 
+COPY nginx.conf /etc/nginx/nginx.conf
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
