--- a/front/package.json
+++ b/front/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@hookform/error-message": "^2.0.1",
     "axios": "^1.3.2",
+    "google-map-react": "^2.2.0",
     "i": "^0.3.7",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -33,12 +34,14 @@
     "vite-plugin-svgr": "^2.4.0"
   },
   "devDependencies": {
+    "@types/google.maps": "^3.51.1",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/sort-by": "^1.2.0",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
+    "@ubilabs/google-maps-react-hooks": "^2.0.2",
     "@vitejs/plugin-react": "^3.0.0",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.32.0",
