feat: 메인페이지크롤링&단체소개글 작성

--- a/back/pom.xml
+++ b/back/pom.xml
@@ -195,6 +195,12 @@
 		    <artifactId>google-cloud-vision</artifactId>
 		    <version>3.7.0</version>
 		</dependency>
+		<!-- Jsoup : java crawling library -->
+		<dependency>
+		    <groupId>org.jsoup</groupId>
+		    <artifactId>jsoup</artifactId>
+		    <version>1.15.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
