--- a/back/src/main/resources/application.yml
+++ b/back/src/main/resources/application.yml
@@ -4,17 +4,11 @@ server:
     context-path: /puppy
 spring:
 
-# 배포 테스트
-#  driverClassName: com.mysql.cj.jdbc.Driver
-#  url: jdbc:mysql://puppy-db:3306/puppylink?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul
-#  username: puppy
-#  password: ssafy
-
-  datasource:
-   driverClassName: com.mysql.cj.jdbc.Driver
-   url: jdbc:mysql://localhost:3306/puppylink?serverTimezone=Asia/Seoul
-   username: puppy
-   password: ssafy
+  # datasource:
+  #   driverClassName: com.mysql.cj.jdbc.Driver
+  #   url: jdbc:mysql://localhost:3306/puppylink?serverTimezone=Asia/Seoul
+  #   username: puppy
+  #   password: ssafy
 
   jpa:
     open-in-view: true
@@ -50,13 +44,9 @@ spring:
             required: true
   session:
     store-type: redis
-  redis:
-    host: localhost
-    port: 6379
-# 배포 테스트
-#  redis:
-#     host: puppy-redis
-#     port: 6379
+  # redis:
+  #   host: localhost
+  #   port: 6379
   cache:
     type: redis
 
