--- a/back/pom.xml
+++ b/back/pom.xml
@@ -201,6 +201,11 @@
 		    <artifactId>jsoup</artifactId>
 		    <version>1.15.3</version>
 		</dependency>
+		
+		<dependency> 
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-web</artifactId>
+		</dependency>		
 	</dependencies>
 
 	<build>
