--- a/front/package.json
+++ b/front/package.json
@@ -16,9 +16,12 @@
     "stylelint:fix": "npm run stylelint -- --fix"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^36.0.1",
+    "@ckeditor/ckeditor5-react": "^5.0.6",
     "@hookform/error-message": "^2.0.1",
     "axios": "^1.3.2",
     "google-map-react": "^2.2.0",
+    "html-react-parser": "^3.0.9",
     "i": "^0.3.7",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
