--- a/back/src/main/resources/application.yml
+++ b/back/src/main/resources/application.yml
@@ -4,11 +4,11 @@ server:
     context-path: /puppy
 spring:
 
-#  datasource:
-#    driverClassName: com.mysql.cj.jdbc.Driver
-#    url: jdbc:mysql://localhost:3306/puppylink?serverTimezone=Asia/Seoul
-#    username: puppy
-#    password: ssafy
+  datasource:
+    driverClassName: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/puppylink?serverTimezone=Asia/Seoul
+    username: puppy
+    password: ssafy
 
 
   jpa:
@@ -45,9 +45,9 @@ spring:
             required: true
 #  session:
 #    store-type: redis
-#  redis:
-#    host: localhost
-#    port: 6379
+  redis:
+    host: localhost
+    port: 6379
   cache:
     type: redis
 
