!HOTFIX: jenkinsfile 수정

--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -3,3 +3,4 @@ ENV MARIADB_ROOT_PASSWORD=ssafy
 ENV MARIADB_DATABASE=puppylink
 ENV MARIADB_USER=puppy
 ENV MARIADB_PASSWORD=ssafy
+ENV TZ=Asia/Seoul
